--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "js-cookie": "^3.0.5",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
   },
